# padelude

./: README.md  default.nix  padelude.cabal  release.nix  stack.yaml
src/: Padelude.hs
