name:                padelude
version:             0.1.1.1
synopsis:            A reasonable prelude
description:         A sensible set of defaults for my own tastes.
                     Based on protolude.
homepage:            https://github.com/qfjp/padelude
license:             GPL-3
license-file:        COPYING
author:              Daniel Pade
maintainer:          djpade@gmail.com
copyright:           2017 Daniel Pade
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC == 7.6.1,
  GHC == 7.6.2,
  GHC == 7.6.3,
  GHC == 7.8.1,
  GHC == 7.8.2,
  GHC == 7.8.3,
  GHC == 7.8.4,
  GHC == 7.10.1,
  GHC == 7.10.2,
  GHC == 7.10.3,
  GHC == 8.0.1,
  GHC == 8.2.1
Bug-Reports:         https://github.com/qfjp/padelude/issues

description:
    A sensible set of defaults for my own tastes.  Based on protolude.
    type: git
    location: git@github.com:qfjp/padelude.git

library
  exposed-modules:     Padelude
  other-modules:
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  ghc-options:         -Wall -fwarn-implicit-prelude
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1 && < 1
                     , set-monad >= 0.2.0.0 && < 1
